deploy: a8f50db9a1c657a1bf295c7bf1bfbe3a97bf0ca8

--- a/growthbook/sdk/java/GrowthBook.html
+++ b/growthbook/sdk/java/GrowthBook.html
@@ -78,7 +78,7 @@ loadScripts(document, 'script');</script>
 <div class="type-signature"><span class="modifiers">public class </span><span class="element-name type-name-label">GrowthBook</span>
 <span class="extends-implements">extends <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a></span></div>
 <div class="block">GrowthBook SDK class.
- Build a context with <a href="models/Context.html#builder()"><code>Context.builder()</code></a> or <a href="models/Context.html#create(java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.util.Map,growthbook.sdk.java.models.TrackingCallback)"><code>Context.create(String, String, Boolean, Boolean, String, Map, TrackingCallback)</code></a>
+ Build a context with <a href="models/GBContext.html#builder()"><code>GBContext.builder()</code></a> or <a href="models/GBContext.html#create(java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.util.Map,growthbook.sdk.java.models.TrackingCallback)"><code>GBContext.create(String, String, Boolean, Boolean, String, Map, TrackingCallback)</code></a>
  and pass it as an argument to the class constructor.</div>
 </section>
 <section class="summary">
@@ -95,9 +95,9 @@ loadScripts(document, 'script');</script>
 <div class="col-last even-row-color">
 <div class="block">No-args constructor.</div>
 </div>
-<div class="col-constructor-name odd-row-color"><code><a href="#%3Cinit%3E(growthbook.sdk.java.models.Context)" class="member-name-link">GrowthBook</a><wbr>(<a href="models/Context.html" title="class in growthbook.sdk.java.models">Context</a>&nbsp;context)</code></div>
+<div class="col-constructor-name odd-row-color"><code><a href="#%3Cinit%3E(growthbook.sdk.java.models.GBContext)" class="member-name-link">GrowthBook</a><wbr>(<a href="models/GBContext.html" title="class in growthbook.sdk.java.models">GBContext</a>&nbsp;context)</code></div>
 <div class="col-last odd-row-color">
-<div class="block">Initialize the GrowthBook SDK with a provided <a href="models/Context.html" title="class in growthbook.sdk.java.models"><code>Context</code></a></div>
+<div class="block">Initialize the GrowthBook SDK with a provided <a href="models/GBContext.html" title="class in growthbook.sdk.java.models"><code>GBContext</code></a></div>
 </div>
 </div>
 </section>
@@ -185,13 +185,13 @@ loadScripts(document, 'script');</script>
 <h2>Constructor Details</h2>
 <ul class="member-list">
 <li>
-<section class="detail" id="&lt;init&gt;(growthbook.sdk.java.models.Context)">
+<section class="detail" id="&lt;init&gt;(growthbook.sdk.java.models.GBContext)">
 <h3>GrowthBook</h3>
-<div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="element-name">GrowthBook</span><wbr><span class="parameters">(<a href="models/Context.html" title="class in growthbook.sdk.java.models">Context</a>&nbsp;context)</span></div>
-<div class="block">Initialize the GrowthBook SDK with a provided <a href="models/Context.html" title="class in growthbook.sdk.java.models"><code>Context</code></a></div>
+<div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="element-name">GrowthBook</span><wbr><span class="parameters">(<a href="models/GBContext.html" title="class in growthbook.sdk.java.models">GBContext</a>&nbsp;context)</span></div>
+<div class="block">Initialize the GrowthBook SDK with a provided <a href="models/GBContext.html" title="class in growthbook.sdk.java.models"><code>GBContext</code></a></div>
 <dl class="notes">
 <dt>Parameters:</dt>
-<dd><code>context</code> - <a href="models/Context.html" title="class in growthbook.sdk.java.models"><code>Context</code></a></dd>
+<dd><code>context</code> - <a href="models/GBContext.html" title="class in growthbook.sdk.java.models"><code>GBContext</code></a></dd>
 </dl>
 </section>
 </li>
@@ -199,8 +199,8 @@ loadScripts(document, 'script');</script>
 <section class="detail" id="&lt;init&gt;()">
 <h3>GrowthBook</h3>
 <div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="element-name">GrowthBook</span>()</div>
-<div class="block">No-args constructor. A <a href="models/Context.html" title="class in growthbook.sdk.java.models"><code>Context</code></a> with default values is created.
- It's recommended to create your own context with <a href="models/Context.html#builder()"><code>Context.builder()</code></a> or <a href="models/Context.html#create(java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.util.Map,growthbook.sdk.java.models.TrackingCallback)"><code>Context.create(String, String, Boolean, Boolean, String, Map, TrackingCallback)</code></a></div>
+<div class="block">No-args constructor. A <a href="models/GBContext.html" title="class in growthbook.sdk.java.models"><code>GBContext</code></a> with default values is created.
+ It's recommended to create your own context with <a href="models/GBContext.html#builder()"><code>GBContext.builder()</code></a> or <a href="models/GBContext.html#create(java.lang.String,java.lang.String,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.util.Map,growthbook.sdk.java.models.TrackingCallback)"><code>GBContext.create(String, String, Boolean, Boolean, String, Map, TrackingCallback)</code></a></div>
 </section>
 </li>
 </ul>
