--- a/growthbook/sdk/java/models/ExperimentResult.html
+++ b/growthbook/sdk/java/models/ExperimentResult.html
@@ -81,7 +81,7 @@ loadScripts(document, 'script');</script>
 <hr>
 <div class="type-signature"><span class="modifiers">public class </span><span class="element-name type-name-label">ExperimentResult&lt;ValueType&gt;</span>
 <span class="extends-implements">extends <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a></span></div>
-<div class="block">The result of running an <a href="Experiment.html" title="class in growthbook.sdk.java.models"><code>Experiment</code></a> given a specific <a href="Context.html" title="class in growthbook.sdk.java.models"><code>Context</code></a>
+<div class="block">The result of running an <a href="Experiment.html" title="class in growthbook.sdk.java.models"><code>Experiment</code></a> given a specific <a href="GBContext.html" title="class in growthbook.sdk.java.models"><code>GBContext</code></a>
 
  <ul>
  <li>inExperiment (boolean) - Whether or not the user is part of the experiment</li>
