--- a/growthbook/sdk/java/models/FeatureResult.html
+++ b/growthbook/sdk/java/models/FeatureResult.html
@@ -81,7 +81,7 @@ loadScripts(document, 'script');</script>
 <hr>
 <div class="type-signature"><span class="modifiers">public class </span><span class="element-name type-name-label">FeatureResult&lt;ValueType&gt;</span>
 <span class="extends-implements">extends <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a></span></div>
-<div class="block">Results for a <a href="../internal/services/FeatureEvaluator.html#evaluateFeature(java.lang.String,growthbook.sdk.java.models.Context)"><code>FeatureEvaluator.evaluateFeature(String, Context)</code></a>
+<div class="block">Results for a <a href="../internal/services/FeatureEvaluator.html#evaluateFeature(java.lang.String,growthbook.sdk.java.models.GBContext)"><code>FeatureEvaluator.evaluateFeature(String, GBContext)</code></a>
 
  <ul>
  <li>value (any) - The assigned value of the feature</li>
