--- a/growthbook/sdk/java/models/package-tree.html
+++ b/growthbook/sdk/java/models/package-tree.html
@@ -59,13 +59,13 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
 <li class="circle">growthbook.sdk.java.models.<a href="BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java.models">BucketRange</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="Context.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="Context.ContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context.ContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="Experiment.html" class="type-name-link" title="class in growthbook.sdk.java.models">Experiment</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="Feature.html" class="type-name-link" title="class in growthbook.sdk.java.models">Feature</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.models.<a href="GBContext.html" class="type-name-link" title="class in growthbook.sdk.java.models">GBContext</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.models">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="Namespace.html" class="type-name-link" title="class in growthbook.sdk.java.models">Namespace</a></li>
 </ul>
 </li>
