--- a/overview-tree.html
+++ b/overview-tree.html
@@ -62,8 +62,6 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java.models">BucketRange</a></li>
 <li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">ConditionEvaluator</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Context.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Context.ContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context.ContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java.models">Experiment</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/ExperimentEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">ExperimentEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">ExperimentResult</a>&lt;ValueType&gt;</li>
@@ -71,6 +69,8 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/FeatureEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">FeatureEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java.models">GBContext</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.models">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
 <li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/GrowthBookJsonUtils.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">GrowthBookJsonUtils</a></li>
 <li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/GrowthBookUtils.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">GrowthBookUtils</a></li>
